--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="{{ name }}" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Weather - informations</title>
 </head>
 <body>
     
-    <h1>From a static file</h1>
+    <h1>{{ title }}</h1>
+    <p>Created by {{ name }}</p>
 
 
     <script src="./js/script.js"></script>
