--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -10,8 +10,8 @@
 </head>
 <body>
     
-    <h1>{{ title }}</h1>
-    <p>Created by {{ name }}</p>
+    <h1>{{ title }} </h1>
+    <p>hello world</p>
 
 
 </body>
