maintain the templating

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -10,8 +10,9 @@
 </head>
 <body>
     
-    <h1>{{ title }} </h1>
-    <p>hello world</p>
+     {{>header }}
+    <p>Created by {{ name }}</p>
+    {{>footer }}
 
 
 </body>
