--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -10,9 +10,9 @@
 </head>
 <body>
     
-    <h1>{{ title }}</h1>
-    <p>Created by {{ name }}</p>
-
+    {{>header }}
+    <p>hello world</p>
+{{>footer }}
 
 </body>
 </html>
