--- a/web-server/templates/partials/footer.hbs
+++ b/web-server/templates/partials/footer.hbs
@@ -1,4 +1,44 @@
 <footer id="footer">
 
-    This is a footer
+<div class="abstract">
+    <div class="abstract-logo">
+        <img src="./img/weather.png" alt="" class="abstract-img">
+    </div>
+    <div class="social">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+             
+    </div>
+</div>
+<div class="support">
+     <h4 class="title-support">Sitemap</h4>
+     <nav class="footer-items">
+         <ul class="footer-list">
+             <li class="list-item"><a href="#" class="link">Weather</a></li>
+              <li class="list-item"><a href="#" class="link">About</a></li>
+               <li class="list-item"><a href="#" class="link">Help</a></li>
+         </ul>
+     </nav>
+</div>
+<div class="support">
+     <h4 class="title-support">Sitemap</h4>
+     <nav class="footer-items">
+         <ul class="footer-list">
+             <li class="list-item"><a href="#" class="link">Weather</a></li>
+              <li class="list-item"><a href="#" class="link">About</a></li>
+               <li class="list-item"><a href="#" class="link">Help</a></li>
+         </ul>
+     </nav>
+</div>
+<div class="news">
+   <div class="up">
+       <p><i class="fa-solid fa-envelope"></i><span>Stay up to date</span></p>
+       <form class="subscribe">
+           <input type="email" placeholder="Enter your email adress" />
+           <input type="button" value="Subscribe" />
+       </form>
+   </div> 
+</div>
+   
 </footer>
