--- a/web-server/templates/partials/header.hbs
+++ b/web-server/templates/partials/header.hbs
@@ -1,15 +1,57 @@
+
 <header id="header">
-    <h1 class="title">{{ title }}</h1>
+<div class="container">
+    <div class="logo">
+       <img src="./img/weather.png" alt="logo" />
+   </div>
 
 <nav class="navigation">
     <ul class="items">
-        <li class="item-list"><a href="/">Weather</a></li>
+       <li class="item-list"><a href="/">Weather</a></li>
        <li class="item-list"><a href="/about">about</a></li>
        <li class="item-list"><a href="/help">help</a></li>
     </ul>
+</nav>
 
-    <div class="search">
+ <div class="search">
         <input type="text" placeholder="Example : California" />
     </div>
-</nav>
+</div> 
+
+<div class="popular">
+    <div class="image">
+      logo
+    </div>
+
+    <div class="informations">
+        <h2 class="title">Popular cities</h2>
+        <div class="info">
+            <p>logo</p>
+            <p>55 <span class="degree">F</span> <span class="city">New York</span> </p>
+        </div>
+       <div class="info">
+            <p>logo</p>
+            <p>55 <span class="degree">F</span> <span class="city">New York</span> </p>
+        </div>
+       <div class="info">
+            <p>logo</p>
+            <p>55 <span class="degree">F</span> <span class="city">New York</span> </p>
+        </div>
+       <div class="info">
+            <p>logo</p>
+            <p>55 <span class="degree">F</span> <span class="city">New York</span> </p>
+        </div>
+       <div class="info">
+            <p>logo</p>
+            <p>55 <span class="degree">F</span> <span class="city">New York</span> </p>
+        </div>
+       <div class="info">
+            <p>logo</p>
+            <p>55 <span class="degree">F</span> <span class="city">New York</span> </p>
+        </div>
+    </div>
+</div>
+
 </header>
+
+
