finishing the backend

--- a/web-server/templates/partials/header.hbs
+++ b/web-server/templates/partials/header.hbs
@@ -14,7 +14,10 @@
 </nav>
 
  <div class="search">
-        <input type="text" placeholder="Example : California" />
+     <form class="submit">
+     <input type="text" id="location" placeholder="Search for a location" />
+     </form>
+   
     </div>
 </div> 
 
