--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -30,6 +30,7 @@ body{
     width: 100%;
     min-height:100vh;
     background-color: var(--bg-color);
+    overflow-x: hidden;
   
  
 
@@ -78,6 +79,28 @@ body{
     margin:1.5rem 1.5rem;
 }
 
+.submit input {
+
+    background:transparent;
+    border:1px solid var(--text-color);
+    color:var(--text-color);
+    padding:0.4rem;
+    cursor: pointer;
+    transition: all 0.2s linear;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline:none;
+}
+.submit input:focus {
+
+    border:2px solid var(--text-color);
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline:none;
+    
+}
 .navigation{
 flex-grow: 3;
 }
