--- a/web-server/templates/partials/main.hbs
+++ b/web-server/templates/partials/main.hbs
@@ -23,86 +23,21 @@
 </section>
     
     <section class="articles">
-        <div class="card">
-            <div class="card-img">
-                 <img src="./img/img.jpg" />
-            </div>
-           
-            <div class="card-container">
-                <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto commodi sunt animi recusandae, id vel esse iusto sapiente libero ab beatae quos laborum sequi et ullam. Delectus itaque minus mollitia.</p>
-                <p class="card-anchor"><a href="#">view more ...</a></p>
-            </div>
-          
-        </div>
-         <div class="card">
-            <div class="card-img">
-                 <img src="./img/img.jpg" />
-            </div>
-           
-            <div class="card-container">
-                <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto commodi sunt animi recusandae, id vel esse iusto sapiente libero ab beatae quos laborum sequi et ullam. Delectus itaque minus mollitia.</p>
-                <p class="card-anchor"><a href="#">view more ...</a></p>
-            </div>
-          
-        </div>
-         <div class="card">
-            <div class="card-img">
-                 <img src="./img/img.jpg" />
-            </div>
-           
-            <div class="card-container">
-                <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto commodi sunt animi recusandae, id vel esse iusto sapiente libero ab beatae quos laborum sequi et ullam. Delectus itaque minus mollitia.</p>
-                <p class="card-anchor"><a href="#">view more ...</a></p>
-            </div>
-          
-        </div>
+      <form class="submit">
+     <input type="text" id="location" placeholder="choose a country" />
+      </form>
+
+     <div class="card-containers">
+       
+     </div> 
+        
     </section>
 
      <section class="like">
-        <div class="like-card">
+         {{!-- <div class="like-card">
             <img src="./img/img.jpg" />
             <p class="desc">description</p>
             <p class="tags">tags</p>
-        </div>
-       <div class="like-card">
-            <img src="./img/img.jpg" />
-            <p class="desc">description</p>
-            <p class="tags">tags</p>
-        </div>
-        <div class="like-card">
-            <img src="./img/img.jpg" />
-            <p class="desc">description</p>
-            <p class="tags">tags</p>
-        </div>
-         <div class="like-card">
-            <img src="./img/img.jpg" />
-            <p class="desc">description</p>
-            <p class="tags">tags</p>
-        </div>
-         <div class="like-card">
-            <img src="./img/img.jpg" />
-            <p class="desc">description</p>
-            <p class="tags">tags</p>
-        </div>
-         <div class="like-card">
-            <img src="./img/img.jpg" />
-            <p class="desc">description</p>
-            <p class="tags">tags</p>
-        </div>
-         <div class="like-card">
-            <img src="./img/img.jpg" />
-            <p class="desc">description</p>
-            <p class="tags">tags</p>
-        </div>
-         <div class="like-card">
-            <img src="./img/img.jpg" />
-            <p class="desc">description</p>
-            <p class="tags">tags</p>
-        </div>
-         <div class="like-card">
-            <img src="./img/img.jpg" />
-            <p class="desc">description</p>
-            <p class="tags">tags</p>
-        </div>
+        </div> --}}
     </section>
 </main>
