finishing the ui

--- a/web-server/templates/partials/main.hbs
+++ b/web-server/templates/partials/main.hbs
@@ -23,9 +23,10 @@
 </section>
     
     <section class="articles">
-      <form class="submit">
+    <form id="form" class="submit">
      <input type="text" id="location" placeholder="choose a country" />
-      </form>
+     <button class="search">Search</button>
+    </form>
 
      <div class="card-containers">
        
